--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,37 +4,41 @@
 
 <web-app>
 
-  <display-name>Archetype Created Web Application</display-name>
-  
-  <context-param>
-   <param-name>resteasy.servlet.mapping.prefix</param-name>
-   <param-value>/rest/</param-value>
-  </context-param>
-  
-  <context-param>
-   <param-name>resteasy.scan</param-name>
-   <param-value>false</param-value>
-  </context-param>
-  
-  <listener>
-   <listener-class>
-    org.jboss.resteasy.plugins.server.servlet.ReasteasyBootstrap
-   </listener-class>
-  </listener>
-  
-  <servlet>
-    <servlet-name>resteasy-servlet</servlet-name>
-    <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
-  </servlet>
-  <init-param>
-     <param-name>javax.ws.rs.Application</param-name>
-     <param-value>application.RestAPI</param-value>
-  </init-param>
-  
-  <servlet-mapping>
-   <servlet-name>resteasy-servlet</servlet-name>
-   <url-pattern>/rest/*</url-pattern>
-  </servlet-mapping>
-  
-  
+
+	<display-name>Archetype Created Web Application</display-name>
+
+	<context-param>
+		<param-name>resteasy.servlet.mapping.prefix</param-name>
+		<param-value>/rest/</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>resteasy.scan</param-name>
+		<param-value>false</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>
+			org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
+		</listener-class>
+	</listener>
+
+
+	<servlet>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+		<init-param>
+			<param-name>javax.ws.rs.Application</param-name>
+			<param-value>application.RestAPI</param-value>
+		</init-param>
+
+	</servlet>
+
+
+	<servlet-mapping>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+
+
 </web-app>
